<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Panel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_scr_epsettings">epsettings</string>
    <string name="pref_ckb_autostart">autostart</string>
    <string name="pref_interfacesettings_vertical">interfacesettings_vert</string>
    <string name="pref_interfacesettings_horizonal">interfacesettings_hori</string>
    <string name="pref_size_per_vert">sizeVert</string>
    <string name="pref_positonY_per_vert">positionY_Vert</string>
    <string name="pref_size_per_horiz">sizeHoriz</string>
    <string name="pref_positonY_per_horiz">positionY_Horiz</string>
    <string name="pref_wallpaperpath">wallpaperpath</string>
    <string name="pref_shortcut1">shortcut1</string>
    <string name="pref_shortcut2">shortcut2</string>
    <string name="pref_shortcut3">shortcut3</string>
    <string name="pref_quit">quit</string>
    <string name="pref_about">about</string>
    <string name="pref_sensitivity">sensitivity</string>
    <string name="pref_vibrate">vibrate</string>
    <string name="pref_function_settings">function_settings</string>
    <string name="pref_backup">backup</string>
    <string name="pref_restore">restore</string>
</resources>