<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="@string/pref_scr_epsettings"
                  android:title="Easy Panel设置">
    <PreferenceCategory
            android:title="设置">
        <CheckBoxPreference
                android:summaryOff="关闭"
                android:title="开机自启动"
                android:summaryOn="开启"
                android:key="@string/pref_ckb_autostart"
                android:defaultValue="true"/>
        <Preference
                android:title="壁纸路径"
                android:summary="未设置"
                android:key="@string/pref_wallpaperpath" />
        <PreferenceScreen
                android:title="界面设置"
                android:key="screen_interface"
                >
            <Preference
                    android:title="竖屏界面设置"
                    android:summary="设置竖屏时菜单的大小和位置"
                    android:key="@string/pref_interfacesettings_vertical"/>
            <Preference
                    android:title="横屏界面设置"
                    android:summary="设置横屏时菜单的大小和位置"
                    android:key="@string/pref_interfacesettings_horizonal"/>
            <com.patrick.easypanel.views.SeekBarPreference
                    android:title="触摸延迟"
                    android:summary="200"
                    android:key="@string/pref_sensitivity"/>
            <CheckBoxPreference
                    android:title="震动提示"
                    android:summaryOn="开启"
                    android:summaryOff="关闭"
                    android:defaultValue="true"
                    android:key="@string/pref_vibrate"/>
            <Preference
                    android:title="功能设置"
                    android:summary="定制每个区块的功能"
                    android:key="@string/pref_function_settings"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="备份与恢复">
        <Preference
                android:title="备份设置"
                android:key="@string/pref_backup"/>
        <Preference
                android:title="恢复设置"
                android:key="@string/pref_restore"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="其他">
        <Preference
                android:title="彻底退出"
                android:key="@string/pref_quit"/>
        <Preference
                android:title="关于"
                android:key="@string/pref_about"/>
    </PreferenceCategory>
</PreferenceScreen>